--- a/.github/workflows/microservice-cicd-template.yaml
+++ b/.github/workflows/microservice-cicd-template.yaml
@@ -139,7 +139,7 @@ jobs:
         export CHART_VERSION=${{ needs.setup.outputs.chart_version }}
         export DOCKER_TAG=${{ needs.setup.outputs.docker_tag }}
 
-        envsubst < ${{ inputs.argocd_app_file }} > app-final.yaml
+        envsubst '${AZURE_REGISTRY_NAME} ${CHART_VERSION} ${DOCKER_TAG}' < ./deploy/k8s/argocd/accessmanagement-app.yaml > app-final.yaml
 
         sudo argocd app create -f app-final.yaml --upsert
 
