--- a/deploy/k8s/argocd/requestmanagement-app.yaml
+++ b/deploy/k8s/argocd/requestmanagement-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: "oci://${AZURE_REGISTRY_NAME}.azurecr.io/${AZURE_REGISTRY_HELM_PATH}"
+    repoURL: "oci://${AZURE_REGISTRY_NAME}.azurecr.io/helm"
     targetRevision: ${CHART_VERSION}
     chart: requestmanagement
     helm:
