--- a/.github/workflows/microservice-ci-template.yaml
+++ b/.github/workflows/microservice-ci-template.yaml
@@ -25,28 +25,14 @@ jobs:
     runs-on: [self-hosted, azure]
     steps:
     - uses: actions/checkout@v3
-
-    - name: Set up Git
-      run: |
-        git fetch --tags
-
-    - name: Get latest tag
-      id: get_tag
-      run: |
-        LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.2.0")
-        echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
-        echo "Found latest tag: $LATEST_TAG"
-
-    - name: Calculate next patch version
+    
+    - name: Set Docker tag (auto generate)
       id: set_docker_tag
       run: |
-        BASE_VERSION="${{ steps.get_tag.outputs.latest_tag }}"
-        BASE_VERSION=${BASE_VERSION#v} # Remove leading v if present
-        IFS='.' read -r MAJOR MINOR PATCH <<< "$BASE_VERSION"
-        NEW_PATCH=$((PATCH + 1))
-        NEXT_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
-        echo "docker_tag=$NEXT_VERSION" >> $GITHUB_OUTPUT
-        echo "Calculated next version: $NEXT_VERSION"
+        COMMIT_COUNT=$(git rev-list --count HEAD)
+        VERSION="0.2.${COMMIT_COUNT}"
+        echo "docker_tag=$VERSION" >> $GITHUB_OUTPUT
+        echo "Using version: $VERSION"
 
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v2
